--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -1,3 +1,8 @@
+/* * {
+    margin: 0px;
+    padding: 0px;
+} */
+
 /* common shared style */
 body {
     font-family: 'Open Sans', sans-serif;
@@ -6,11 +11,34 @@ body {
 .btn-primary {
     border-radius: 5px;
     background: #FD6E0A;
+    border: 0;
+    color: white;
+    font-size: 20px;
+    font-weight: 700;
+    padding: 15px 35px;
+}
+
+.section-title {
+    color: #181818;
+    text-align: center;
+    font-size: 35px;
+    font-weight: 700;
+}
+
+.section-decs {
+    color: #757575;
+    text-align: center;
+    font-size: 18px;
 }
 
 /* nav related design */
 nav {
     display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 0 200px;
+    margin-top: 50px;
+
 }
 
 .nav-title {
@@ -30,6 +58,7 @@ nav {
 
 nav>ul {
     display: flex;
+    align-items: center;
 }
 
 nav li {
@@ -40,9 +69,95 @@ nav a {
     text-decoration: none;
     margin-right: 50px;
     color: var(--Dark-02, #474747);
-    /* font-family: Open Sans;
+
     font-size: 20px;
-    font-style: normal;
+
     font-weight: 400;
-    line-height: normal; */
+
+}
+
+.header {
+    background-color: #FFF8F3;
+    background-image: url(../images/header_bg.png);
+    background-repeat: no-repeat;
+    background-size: 700px 400px;
+    background-position: bottom right;
+
+}
+
+/* banner related style */
+.banner {
+    padding: 30px 30px 0px 150px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.banner-content {
+    max-width: 500px;
+}
+
+.banner .profile-pic {
+    width: 500px;
+}
+
+.banner-greeting {
+    color: #474747;
+    font-size: 45px;
+    margin-bottom: 0px;
+}
+
+.banner-title {
+    font-size: 85px;
+    font-style: normal;
+    font-weight: 700;
+    margin-top: 5px;
+    margin-bottom: 20px;
+}
+
+.banner-desc {
+    margin-top: 0;
+    margin-bottom: 49px;
+
+}
+
+/* main section design */
+main {
+    max-width: 1100px;
+    margin: 0 auto;
+}
+
+/* about section design */
+.about {
+    padding: 130px;
+    border-radius: 10px;
+    background: #FFF8F3;
+    margin: 130px 0;
+}
+
+.about-info-container {
+    display: flex;
+    justify-content: space-around;
+}
+
+.about-info {
+    text-align: center;
+}
+
+.info-title {
+    color: var(--Dark-03, #757575);
+    text-align: center;
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 30px;
+    /* 150% */
+    margin-bottom: 0;
+}
+
+.info-desc {
+    color: var(--Dark-02, #474747);
+    font-size: 20px;
+    font-weight: 700;
+    line-height: 30px;
+    margin-top: 0;
 }
