--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -161,3 +161,18 @@ main {
     line-height: 30px;
     margin-top: 0;
 }
+/* skills related design */
+#whit-i-do-desc{
+    padding: 30px 150px;
+}
+.skills-container{
+    display: flex;
+}
+.skill{
+    padding: 30px;
+    box-shadow: #474747;
+    gap: 24px;
+}
+.skill-desc{
+    text-align: justify;
+}
