added footer desc

--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -210,7 +210,8 @@ main section {
     color: #757575;
     max-width: 450px;
 }
-#resume-container1{
+
+#resume-container1 {
     margin-right: 150px;
 }
 
@@ -220,14 +221,25 @@ main section {
     font-weight: 700;
     margin-bottom: 10px;
 }
-.resume-item-institute{
+
+.resume-item-institute {
     margin-top: 0px;
     margin-bottom: 30px;
     color: #757575;
 }
-.resume-container hr{
+
+.resume-container hr {
     margin: 30px;
 }
-.download-cv{
+
+.download-cv {
     text-align: center;
     margin-top: 50px;
+}
+/* footer style  */
+.footer{
+    display: flex;
+    background-color: #FFF8F3;
+    margin-top: 100px;
+    padding: 130px 200px;
+}
