--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -236,10 +236,43 @@ main section {
     text-align: center;
     margin-top: 50px;
 }
+
 /* footer style  */
-.footer{
+.footer {
     display: flex;
+    gap: 100px;
     background-color: #FFF8F3;
     margin-top: 100px;
     padding: 130px 200px;
+}
+
+.footer-column {
+    width: 50%;
+}
+.social-links a{
+    margin-right: 25px;
+}
+
+.contrat input {
+    display: block;
+    width: 100%;
+    height: 30px;
+    margin-bottom: 25px;
+    padding: 18px 30px;
+    color: var(--Dark-03, #757575);
+    border-radius: 5px;
+    background: var(--White-Color, #FFF);
+    border: 0;
+}
+
+.contrat textarea {
+    display: block;
+    width: 100%;
+    height: 120px;
+    margin-bottom: 25px;
+    padding: 18px 30px;
+    color: var(--Dark-03, #757575);
+    border-radius: 5px;
+    background: var(--White-Color, #FFF);
+    border: 0;
 }
