--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -78,12 +78,13 @@ nav a {
 
 .header {
     background-color: #FFF8F3;
-    background-image: url(../images/header_bg.png);
+    background-image: url(../images/header_bg.png),url('../images/developer.png');
     background-repeat: no-repeat;
-    background-size: 700px 400px;
-    background-position: bottom right;
+    background-size: 700px 400px , 150px 750px;
+    background-position: bottom right , top left;
 
 }
+
 
 /* banner related style */
 .banner {
